--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     
       $(function() {
         var app = new Application();
+        // This comment has been added through a Prose.io patch.
         app.render();
       });
     </script>
